apps/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-boutique
  namespace: online-boutique
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: boutique.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend  
                port:
                  number: 80
